# LearnOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md  setup.py
include/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  utils.hpp
notes/: advance.md  advanced_light.md  basic.md
res/shaders/: fragment.shader  fragment3d.shader  fragmentCube.shader  fragmentDepth.shader  fragmentEnvMap.shader  fragmentModel.shader  fragmentNanoSuit.shader  fragmentObject.shader  fragmentObjectMap.shader  fragmentScreen.shader  fragmentTexture.shader  fragmentUniformBuffer.shader  vertex.shader  vertexObject.shader  vertexObjectMap.shader
res/shaders/advanced_light/: light.fs
res/shaders/geometry_shader/: explode.gs
src/: advance.cpp  intro.cpp  light_advanced.cpp  main.cpp
